MDEV-7913 main.openssl_6975 'tlsv10' fails in buildbot on Wheezy and Precise

version_ssl_library should show the version
of openssl library that is being used, not the one
that server was compiled with.